# simpleVK

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/multigpu/: devices_manager.cpp  devices_manager.h  main.cpp  resources.cpp  resources.h  window.cpp  window.h
example/nn/: CMakeLists.txt  command_buffer.cpp  command_buffer.h  command_manager.cpp  command_manager.h  device.cpp  device.h  device_manager.cpp  device_manager.h  main.cpp  nn.comp  pipeline.cpp  pipeline.h  pipeline_manager.cpp  pipeline_manager.h  resources.cpp  resources.h  shader.cpp  shader.h  sigmoid.comp  weight.comp
example/triangle/: .directory  CMakeLists.txt  application.cpp  application.h  buffer.cpp  buffer.h  command_buffers.cpp  command_buffers.h  descriptor_sets.cpp  descriptor_sets.h  device.cpp  device.h  frame_buffer.cpp  frame_buffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  instance.cpp  instance.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h  simple_vulkan.h  swapchain.cpp  swapchain.h  triangle.cpp  triangle.frag  triangle.vert
include/: utility.h
