CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SimpleVK)
FIND_PACKAGE(GLFW)
FIND_PACKAGE(Vulkan)
INCLUDE_DIRECTORIES(include ${GLFW_INCLUDE_DIR} ${Vulkan_INCLUDE_DIR})

MESSAGE(STATUS "${Vulkan_INCLUDE_DIR}")
MESSAGE(STATUS "${GLFW_INCLUDE_DIR}")
MESSAGE(STATUS "${Vulkan_LIBRARIES}")
MESSAGE(STATUS "${GLFW_LIBRARIES}")

ADD_SUBDIRECTORY(example)
